[gd_scene load_steps=8 format=2]

[ext_resource path="res://UFO/ufo.png" type="Texture" id=1]
[ext_resource path="res://UFO/UFO.gd" type="Script" id=2]
[ext_resource path="res://UFO/ufo_shard1.png" type="Texture" id=3]
[ext_resource path="res://UFO/ufo_shard3.png" type="Texture" id=4]
[ext_resource path="res://UFO/ufo_shard2.png" type="Texture" id=5]
[ext_resource path="res://Satellite/scripts/SatelliteShard.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.7007
height = 19.7789

[node name="UFO_Small" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )
ufo_type = 1
shoot_delay = 0.75
speed = 150.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -30.0

[node name="Shard1" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 6 )
speed = 60.0

[node name="DestroyedSprite1" type="Sprite" parent="Shard1"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shard1"]
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( -30.0524, -116.874, -7.53883, -2.98187, 131.516, 80.4509, 203.029, 44.694, 189.786, -14.9008, 53.3803, -107.604 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Shard1"]
volume_db = -30.0

[node name="Shard2" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 6 )
speed = 60.0

[node name="DestroyedSprite2" type="Sprite" parent="Shard2"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shard2"]
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( -186.323, 59.2616, -4.89014, -1.65752, -4.89014, -118.198, -79.0526, -98.3335, -208.837, 18.2074 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Shard2"]
volume_db = -30.0

[node name="Shard3" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 6 )
speed = 60.0

[node name="DestroyedSprite3" type="Sprite" parent="Shard3"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shard3"]
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( -196.918, 49.9913, -59.1876, 105.613, 138.137, 79.1265, 3.0558, -1.65752, -92.2958, 0.991135 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Shard3"]
volume_db = -30.0
